# trilha-python-dio

./: README.md
13 - APIs Assíncronas com FastAPI/dio_blog/: README.md  pyproject.toml
14 - Autenticacao/desafio/: README.md  main.py  pyproject.toml
